# school-of-music

./: cabal.project  flake.nix
01/: x01.cabal
01/src/: MyLib.hs
02/: x02.cabal
02/app/: Main.hs
02/src/: BluesPitchClass.hs  TwoFiveOne.hs
