cabal-version:      3.0
name:               x01
version:            0.1.0.0
license:            MIT
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.4.0
                    , Euterpea
    hs-source-dirs:   src
    default-language: Haskell2010

executable x01
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x01

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite x01-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x01
