cabal-version:      3.0
name:               x02
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  TwoFiveOne
                    , BluesPitchClass
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , Euterpea
    hs-source-dirs:   src
    default-language: Haskell2010

executable x02
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        x02

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite x02-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x02
